--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ra_hw3_t2",
   "version": "0.1.0",
+  "homepage": "https://ravenrvs.github.io/RA_HW3_T2/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
